lib/tests/fixtures/compiler/evaluation/func_missing_argument.pp
function test($x, $y = foo)
{
}

test()
